[package]
name = "dicom-rs-wasm"
version = "0.1.0"
authors = ["Peter Evers <pevers90@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
dicom-object = { git = "https://github.com/pevers/dicom-rs/", branch = "rust-decoding", version = "0.4.0" }
dicom-pixeldata = { git = "https://github.com/pevers/dicom-rs/", branch = "rust-decoding", version = "0.1.0" }
wasm-bindgen = "0.2.74"
getrandom = { version = "0.2.3", features = ["js"] }
console_error_panic_hook = "0.1.6"
wasm-bindgen-rayon = { version = "1.0" }
rayon = "1.5"